kubernetes/deployment/overlays/jdk/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-with-quarkus
spec:
  template:
    spec:
      containers:
      - name: code-with-quarkus
