kubernetes/deployment/overlays/jdk/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: code-with-quarkus
spec:
  to:
    kind: Service
    name: jdk-deployment-code-with-quarkus
    weight: 100
